--- a/views/index.jade
+++ b/views/index.jade
@@ -60,51 +60,22 @@ html(lang='en')
         section
           h3 open events
           ul.open-list.first
-            li
-              a(href='https://www.facebook.com/events/1395782223994072')
-                p iOS Dev Scout # Nov Meetup
-                  span on 25 Nov, Mon
-                p.tagline by iOS Dev Scout
-            li
-              a(href='https://www.facebook.com/events/561715820572862')
-                p Putting It Together: Vagrant + SSH + Composer + PHPUnit
-                  span on 27 Nov, Wed
-                p.tagline by Singapore PHP User Group
-            li
-              a(href='http://www.meetup.com/Agile-Singapore/events/150498672/')
-                p Nov/2013 - Open Space
-                  span on 27 Nov, Wed
-                p.tagline by Agile Singapore
-            li
-              a(href='https://www.facebook.com/events/218956441613496')
-                p Science Café SG
-                  span on 28 Nov, Thu
-                p.tagline by Science Café
-            li
-              a(href='https://www.facebook.com/events/638817689474844')
-                p Singapore 3D Printing Meetup V
-                  span on 28 Nov, Thu
-                p.tagline by Funbie Studios
-            li
-              a(href='https://www.facebook.com/events/404891872973220')
-                p SG Makers-Arduino meetup
-                  span on 29 Nov, Fri
-                p.tagline by Singapore Arduino Club
-            li
-              a(href='http://www.meetup.com/HTML5Rocks-SG/events/144166122/')
-                p HTML5 Series - Chapter 9: We rocks so much that we speak semantics !
-                  span on 29 Nov, Fri
-                p.tagline by HTML5Rocks@SG
-            li
-              a(href='https://www.facebook.com/events/440841696036601')
-                p How to hack your way through a Termsheet by @Julian Low
-                  span on 29 Nov, Fri
-                p.tagline by Hackers and Painters
+
             li
               a(href='http://www.meetup.com/R-User-Group-SG/events/143782772/')
-                p R Big Data inside Hadoop
+                p Mini RUGs party to end the year
                   span on 3 Dec, Tue
                 p.tagline by R User Group - Singapore (RUGS)
+            li
+              a(href='https://www.facebook.com/events/329307753877741')
+                p Internet of Things with RaspberryPi and Eclipse
+                  span on 3 Dec, Tue
+                p.tagline by HackerspaceSG
+            li
+              a(href='http://www.meetup.com/devops-singapore/events/153085642/')
+                p Devops Singapore Meetup #17: Failure: A love story
+                  span on 4 Dec, Wed
+                p.tagline by DevOps Singapore
             li
               a(href='https://www.facebook.com/events/780193005343684')
                 p Best Practices in Building a Responsive Website by @coderkungfu
@@ -116,10 +87,50 @@ html(lang='en')
                   span on 6 Dec, Fri
                 p.tagline by Hackers and Painters
             li
+              a(href='http://www.meetup.com/HTML5Rocks-SG/events/153528892/')
+                p HTML5 Series - Chapter 9: We rocks so much that we speak semantics !
+                  span on 6 Dec, Fri
+                p.tagline by HTML5Rocks@SG
+            li
               a(href='http://sg.hackandtell.org/')
                 p Hack and Tell
                   span on 10 Dec, Tue
                 p.tagline by Hack and Tell
+            li
+              a(href='https://www.facebook.com/events/189962881192355')
+                p Putting It Together: Puppet + Jenkins CI + Build Tools (Phing/Ant)
+                  span on 11 Dec, Wed
+                p.tagline by Singapore PHP User Group
+            li
+              a(href='https://www.facebook.com/events/595830510477311')
+                p Lessons learnt from Redmart by @Sebastian Deckers
+                  span on 13 Dec, Fri
+                p.tagline by Hackers and Painters
+            li
+              a(href='https://www.facebook.com/events/543302969094113')
+                p How I got my website to top Google's search results with no budget
+                  span on 13 Dec, Fri
+                p.tagline by Hackers and Painters
+            li
+              a(href='http://www.meetup.com/Singapore-Ruby-Group/events/152460012/')
+                p December Meetup
+                  span on 17 Dec, Tue
+                p.tagline by Singapore Ruby Group
+            li
+              a(href='https://www.facebook.com/events/417672288359072')
+                p Last PUGS Meetup for 2013
+                  span on 18 Dec, Wed
+                p.tagline by Python User Group Singapore
+            li
+              a(href='https://www.facebook.com/events/540329056045105')
+                p Casualties: One desk. How we made one mobile app for four platforms in 40 days
+                  span on 20 Dec, Fri
+                p.tagline by Hackers and Painters
+            li
+              a(href='https://www.facebook.com/events/455075267935496')
+                p Kibana by @Kokhong Cheng
+                  span on 20 Dec, Fri
+                p.tagline by Hackers and Painters
 
         section
           h3 open source
