--- a/views/index.jade
+++ b/views/index.jade
@@ -61,21 +61,7 @@ html(lang='en')
           h3 open events
           ul.open-list.first
 
-            li
-              a(href='http://www.meetup.com/R-User-Group-SG/events/143782772/')
-                p Mini RUGs party to end the year
-                  span on 3 Dec, Tue
-                p.tagline by R User Group - Singapore (RUGS)
-            li
-              a(href='https://www.facebook.com/events/329307753877741')
-                p Internet of Things with RaspberryPi and Eclipse
-                  span on 3 Dec, Tue
-                p.tagline by HackerspaceSG
-            li
-              a(href='http://www.meetup.com/devops-singapore/events/153085642/')
-                p Devops Singapore Meetup #17: Failure: A love story
-                  span on 4 Dec, Wed
-                p.tagline by DevOps Singapore
+
             li
               a(href='https://www.facebook.com/events/780193005343684')
                 p Best Practices in Building a Responsive Website by @coderkungfu
@@ -96,6 +82,16 @@ html(lang='en')
                 p Hack and Tell
                   span on 10 Dec, Tue
                 p.tagline by Hack and Tell
+            li
+              a(href='https://www.facebook.com/events/1402357623335926/')
+                p Creative Crew December Talk
+                  span on 10 Dec, Tue
+                p.tagline by Creative Crew
+            li
+              a(href='https://www.facebook.com/events/575488335857682/')
+                p DevMerge 0.0.1
+                  span on 11 Dec, Wed
+                p.tagline by DevMerge
             li
               a(href='https://www.facebook.com/events/189962881192355')
                 p Putting It Together: Puppet + Jenkins CI + Build Tools (Phing/Ant)
