--- a/views/index.jade
+++ b/views/index.jade
@@ -61,31 +61,6 @@ html(lang='en')
           h3 open events
           ul.open-list.first
             li
-              a(href='http://sg.hackandtell.org/')
-                p Hack and Tell
-                  span on 10 Dec, Tue
-                p.tagline by Hack and Tell
-            li
-              a(href='https://www.facebook.com/events/1402357623335926/')
-                p Creative Crew December Talk
-                  span on 10 Dec, Tue
-                p.tagline by Creative Crew
-            li
-              a(href='https://www.facebook.com/events/189962881192355')
-                p Putting It Together: Puppet + Jenkins CI + Build Tools (Phing/Ant)
-                  span on 11 Dec, Wed
-                p.tagline by Singapore PHP User Group
-            li
-              a(href='https://www.facebook.com/events/595830510477311')
-                p Lessons learnt from Redmart by @Sebastian Deckers
-                  span on 13 Dec, Fri
-                p.tagline by Hackers and Painters
-            li
-              a(href='https://www.facebook.com/events/543302969094113')
-                p How I got my website to top Google's search results with no budget
-                  span on 13 Dec, Fri
-                p.tagline by Hackers and Painters
-            li
               a(href='http://www.meetup.com/Singapore-Ruby-Group/events/152460012/')
                 p December Meetup
                   span on 17 Dec, Tue
@@ -96,6 +71,16 @@ html(lang='en')
                   span on 18 Dec, Wed
                 p.tagline by Python User Group Singapore
             li
+              a(href='http://www.meetup.com/R-User-Group-SG/events/152347542/')
+                p Practical Shiny examples and how to extend Shiny
+                  span on 18 Dec, Wed
+                p.tagline by R User Group - Singapore (RUGS)
+            li
+              a(href='https://www.facebook.com/events/238709192957664')
+                p iOS Dev Scout # Dec Meetup
+                  span on 19 Dec, Thu
+                p.tagline by iOS Dev Scout
+            li
               a(href='https://www.facebook.com/events/540329056045105')
                 p Casualties: One desk. How we made one mobile app for four platforms in 40 days
                   span on 20 Dec, Fri
@@ -105,6 +90,11 @@ html(lang='en')
                 p Kibana by @Kokhong Cheng
                   span on 20 Dec, Fri
                 p.tagline by Hackers and Painters
+            li
+              a(href='http://www.meetup.com/R-User-Group-SG/events/152347492/')
+                p Credit Scoring with R
+                  span on 15 Jan, Wed
+                p.tagline by R User Group - Singapore (RUGS)
 
         section
           h3 open source
