--- a/views/index.jade
+++ b/views/index.jade
@@ -61,40 +61,35 @@ html(lang='en')
           h3 open events
           ul.open-list.first
             li
-              a(href='http://www.meetup.com/Singapore-Ruby-Group/events/152460012/')
-                p December Meetup
-                  span on 17 Dec, Tue
-                p.tagline by Singapore Ruby Group
+              a(href='https://www.facebook.com/events/273114889507598')
+                p Auralization and Acoustics
+                  span on 6 Jan, Mon
+                p.tagline by Hackerspace SG
             li
-              a(href='https://www.facebook.com/events/417672288359072')
-                p Last PUGS Meetup for 2013
-                  span on 18 Dec, Wed
-                p.tagline by Python User Group Singapore
+              a(href='http://www.meetup.com/Meteor-Singapore/events/151513102/')
+                p SG Meteorites 0.1
+                  span on 9 Jan, Thu
+                p.tagline by Meteor Singapore
             li
-              a(href='http://www.meetup.com/R-User-Group-SG/events/152347542/')
-                p Practical Shiny examples and how to extend Shiny
-                  span on 18 Dec, Wed
-                p.tagline by R User Group - Singapore (RUGS)
-            li
-              a(href='https://www.facebook.com/events/238709192957664')
-                p iOS Dev Scout # Dec Meetup
-                  span on 19 Dec, Thu
-                p.tagline by iOS Dev Scout
-            li
-              a(href='https://www.facebook.com/events/540329056045105')
-                p Casualties: One desk. How we made one mobile app for four platforms in 40 days
-                  span on 20 Dec, Fri
-                p.tagline by Hackers and Painters
-            li
-              a(href='https://www.facebook.com/events/455075267935496')
-                p Kibana by @Kokhong Cheng
-                  span on 20 Dec, Fri
-                p.tagline by Hackers and Painters
+              a(href='https://www.facebook.com/events/572982409445154')
+                p Creative Crew January Talk
+                  span on 14 Jan, Tue
+                p.tagline by Creative Crew
             li
               a(href='http://www.meetup.com/R-User-Group-SG/events/152347492/')
                 p Credit Scoring with R
                   span on 15 Jan, Wed
                 p.tagline by R User Group - Singapore (RUGS)
+            li
+              a(href='http://www.meetup.com/Singapore-Android-Developers/events/157970792/')
+                p SG Android Developers January 2014
+                  span on 22 Jan, Wed
+                p.tagline by Singapore Android Developers
+            li
+              a(href='https://www.facebook.com/events/256254204532131')
+                p Computational Investing by @Stan
+                  span on 24 Jan, Fri
+                p.tagline by Hackers and Painters
 
         section
           h3 open source
