--- a/views/index.jade
+++ b/views/index.jade
@@ -61,35 +61,75 @@ html(lang='en')
           h3 open events
           ul.open-list.first
             li
-              a(href='https://www.facebook.com/events/273114889507598')
-                p Auralization and Acoustics
-                  span on 6 Jan, Mon
-                p.tagline by Hackerspace SG
-            li
-              a(href='http://www.meetup.com/Meteor-Singapore/events/151513102/')
-                p SG Meteorites 0.1
-                  span on 9 Jan, Thu
-                p.tagline by Meteor Singapore
-            li
               a(href='https://www.facebook.com/events/572982409445154')
                 p Creative Crew January Talk
                   span on 14 Jan, Tue
                 p.tagline by Creative Crew
+            li
+              a(href='http://www.meetup.com/Software-Craftsmanship-Singapore/')
+                p Mini-code-retreat
+                  span on 14 Jan, Tue
+                p.tagline by Software Craftsmanship Singapore
             li
               a(href='http://www.meetup.com/R-User-Group-SG/events/152347492/')
                 p Credit Scoring with R
                   span on 15 Jan, Wed
                 p.tagline by R User Group - Singapore (RUGS)
             li
+              a(href='https://www.facebook.com/events/221206334719637')
+                p How I got my website to top Google's search results with no budget
+                  span on 17 Jan, Fri
+                p.tagline by Hackers and Painters
+            li
+              a(href='https://www.facebook.com/events/367106803434860')
+                p Engineering journalism: how one hack turned into a hacker to elevate his craft
+                  span on 17 Jan, Fri
+                p.tagline by Hackers and Painters
+            li
+              a(href='http://www.meetup.com/Singapore-Ruby-Group/events/158569682/')
+                p January Meetup
+                  span on 21 Jan, Tue
+                p.tagline by Singapore Ruby Group
+            li
               a(href='http://www.meetup.com/Singapore-Android-Developers/events/157970792/')
                 p SG Android Developers January 2014
                   span on 22 Jan, Wed
                 p.tagline by Singapore Android Developers
             li
+              a(href='http://www.meetup.com/DataScience-SG-Singapore/events/158114672/')
+                p [Free SMU Seminar] Big Data, New Physics, and Geospatial Super-Food
+                  span on 23 Jan, Thu
+                p.tagline by DataScience SG (Singapore)
+            li
               a(href='https://www.facebook.com/events/256254204532131')
                 p Computational Investing by @Stan
                   span on 24 Jan, Fri
                 p.tagline by Hackers and Painters
+            li
+              a(href='https://www.facebook.com/events/256254204532131')
+                p Computational Investing by @Stan
+                  span on 24 Jan, Fri
+                p.tagline by Hackers and Painters
+            li
+              a(href='http://www.meetup.com/DataScience-SG-Singapore/events/158721752/')
+                p DataScience SG Meetup - "What is this Data Science thing all about?"
+                  span on 25 Jan, Sat
+                p.tagline by DataScience SG (Singapore)
+            li
+              a(href='http://www.meetup.com/Agile-Singapore/events/159779592/')
+                p Coding Dojo: Legacy Code (C# and Java)
+                  span on 28 Jan, Tue
+                p.tagline by Agile Singapore
+            li
+              a(href='https://www.facebook.com/events/131002393736955')
+                p Why I switch from python to Go? by @Weng Wei
+                  span on 7 Feb, Fri
+                p.tagline by Hackers and Painters
+            li
+              a(href='https://www.facebook.com/events/189999471204741')
+                p Meetup #1
+                  span on 11 Feb, Tue
+                p.tagline by MongoDB User Group
 
         section
           h3 open source
