--- a/views/index.jade
+++ b/views/index.jade
@@ -121,6 +121,11 @@ html(lang='en')
                   span on 28 Jan, Tue
                 p.tagline by Agile Singapore
             li
+              a(href='http://sg.hackandtell.org/')
+                p Hack and Tell
+                  span on 28 Jan, Tue
+                p.tagline by Hack and Tell
+            li
               a(href='https://www.facebook.com/events/131002393736955')
                 p Why I switch from python to Go? by @Weng Wei
                   span on 7 Feb, Fri
