--- a/views/index.jade
+++ b/views/index.jade
@@ -61,20 +61,15 @@ html(lang='en')
           h3 open events
           ul.open-list.first
             li
-              a(href='https://www.facebook.com/events/572982409445154')
-                p Creative Crew January Talk
-                  span on 14 Jan, Tue
-                p.tagline by Creative Crew
-            li
-              a(href='http://www.meetup.com/Software-Craftsmanship-Singapore/')
-                p Mini-code-retreat
-                  span on 14 Jan, Tue
-                p.tagline by Software Craftsmanship Singapore
-            li
               a(href='http://www.meetup.com/R-User-Group-SG/events/152347492/')
                 p Credit Scoring with R
                   span on 15 Jan, Wed
                 p.tagline by R User Group - Singapore (RUGS)
+            li
+              a(href='https://www.facebook.com/events/237568506418651')
+                p AWS User Group Singapore 1st 2014 Meetup
+                  span on 16 Jan, Thu
+                p.tagline by AWS User Group Singapore
             li
               a(href='https://www.facebook.com/events/221206334719637')
                 p How I got my website to top Google's search results with no budget
