--- a/views/index.jade
+++ b/views/index.jade
@@ -60,26 +60,7 @@ html(lang='en')
         section
           h3 open events
           ul.open-list.first
-            li
-              a(href='http://www.meetup.com/R-User-Group-SG/events/152347492/')
-                p Credit Scoring with R
-                  span on 15 Jan, Wed
-                p.tagline by R User Group - Singapore (RUGS)
-            li
-              a(href='https://www.facebook.com/events/237568506418651')
-                p AWS User Group Singapore 1st 2014 Meetup
-                  span on 16 Jan, Thu
-                p.tagline by AWS User Group Singapore
-            li
-              a(href='https://www.facebook.com/events/221206334719637')
-                p How I got my website to top Google's search results with no budget
-                  span on 17 Jan, Fri
-                p.tagline by Hackers and Painters
-            li
-              a(href='https://www.facebook.com/events/367106803434860')
-                p Engineering journalism: how one hack turned into a hacker to elevate his craft
-                  span on 17 Jan, Fri
-                p.tagline by Hackers and Painters
+
             li
               a(href='http://www.meetup.com/Singapore-Ruby-Group/events/158569682/')
                 p January Meetup
@@ -91,6 +72,11 @@ html(lang='en')
                   span on 22 Jan, Wed
                 p.tagline by Singapore Android Developers
             li
+              a(href='http://www.meetup.com/DataScience-SG-Singapore/events/161211972/')
+                p [Free NUS Seminar] Big Data, New Physics, and Geospatial Super-Food
+                  span on 22 Jan, Wed
+                p.tagline by DataScience SG (Singapore)
+            li
               a(href='http://www.meetup.com/DataScience-SG-Singapore/events/158114672/')
                 p [Free SMU Seminar] Big Data, New Physics, and Geospatial Super-Food
                   span on 23 Jan, Thu
@@ -100,6 +86,11 @@ html(lang='en')
                 p Computational Investing by @Stan
                   span on 24 Jan, Fri
                 p.tagline by Hackers and Painters
+            li
+              a(href='http://www.meetup.com/HASKELL-SG/events/158576232/')
+                p The Mathematics of Functors (by Dr. Shaun Martin)
+                  span on 24 Jan, Fri
+                p.tagline by HASKELL.SG
             li
               a(href='http://www.meetup.com/DataScience-SG-Singapore/events/158721752/')
                 p DataScience SG Meetup - "What is this Data Science thing all about?"
@@ -125,6 +116,16 @@ html(lang='en')
                 p Meetup #1
                   span on 11 Feb, Tue
                 p.tagline by MongoDB User Group
+            li
+              a(href='http://www.meetup.com/Singapore-JS/events/160688532/')
+                p talk.js
+                  span on 17 Feb, Mon
+                p.tagline by SingaporeJS
+            li
+              a(href='http://www.meetup.com/PUGS-Postgres-Users-Group-Singapore/events/160644722/')
+                p PUGS Meetup!
+                  span on 19 Feb, Wed
+                p.tagline by PUGS (Postgres Users Group Singapore)
 
         section
           h3 open source
