podcast date and events

--- a/views/index.jade
+++ b/views/index.jade
@@ -60,42 +60,6 @@ html(lang='en')
         section
           h3 open events
           ul.open-list.first
-
-            li
-              a(href='http://www.meetup.com/Singapore-Ruby-Group/events/158569682/')
-                p January Meetup
-                  span on 21 Jan, Tue
-                p.tagline by Singapore Ruby Group
-            li
-              a(href='http://www.meetup.com/Singapore-Android-Developers/events/157970792/')
-                p SG Android Developers January 2014
-                  span on 22 Jan, Wed
-                p.tagline by Singapore Android Developers
-            li
-              a(href='http://www.meetup.com/DataScience-SG-Singapore/events/161211972/')
-                p [Free NUS Seminar] Big Data, New Physics, and Geospatial Super-Food
-                  span on 22 Jan, Wed
-                p.tagline by DataScience SG (Singapore)
-            li
-              a(href='http://www.meetup.com/DataScience-SG-Singapore/events/158114672/')
-                p [Free SMU Seminar] Big Data, New Physics, and Geospatial Super-Food
-                  span on 23 Jan, Thu
-                p.tagline by DataScience SG (Singapore)
-            li
-              a(href='https://www.facebook.com/events/256254204532131')
-                p Computational Investing by @Stan
-                  span on 24 Jan, Fri
-                p.tagline by Hackers and Painters
-            li
-              a(href='http://www.meetup.com/HASKELL-SG/events/158576232/')
-                p The Mathematics of Functors (by Dr. Shaun Martin)
-                  span on 24 Jan, Fri
-                p.tagline by HASKELL.SG
-            li
-              a(href='http://www.meetup.com/DataScience-SG-Singapore/events/158721752/')
-                p DataScience SG Meetup - "What is this Data Science thing all about?"
-                  span on 25 Jan, Sat
-                p.tagline by DataScience SG (Singapore)
             li
               a(href='http://www.meetup.com/Agile-Singapore/events/159779592/')
                 p Coding Dojo: Legacy Code (C# and Java)
@@ -117,6 +81,11 @@ html(lang='en')
                   span on 11 Feb, Tue
                 p.tagline by MongoDB User Group
             li
+              a(href='https://www.facebook.com/events/1414263215485858')
+                p iOS Dev Scout # Feb Meetup
+                  span on 11 Feb, Tue
+                p.tagline by iOS Dev Scout
+            li
               a(href='http://www.meetup.com/Singapore-JS/events/160688532/')
                 p talk.js
                   span on 17 Feb, Mon
@@ -126,6 +95,16 @@ html(lang='en')
                 p PUGS Meetup!
                   span on 19 Feb, Wed
                 p.tagline by PUGS (Postgres Users Group Singapore)
+            li
+              a(href='http://www.meetup.com/Meteor-Singapore/events/162333392/')
+                p SG Meteorites 0.2
+                  span on 20 Feb, Thu
+                p.tagline by Meteor Singapore
+            li
+              a(href='https://www.facebook.com/events/516882598427920')
+                p User acquisition myths & realities by @Arrif Ziaudeen
+                  span on 21 Feb, Fri
+                p.tagline by Hackers and Painters
 
         section
           h3 open source
