corrected jade formatting

--- a/views/index.jade
+++ b/views/index.jade
@@ -7,7 +7,7 @@
   |                                                                                      /_/
   //- |
 
-!!! 5
+doctype
 html(lang='en')
 
   head
@@ -133,14 +133,3 @@ html(lang='en')
         li
           a(href='https://plus.google.com/115395182582724849094')
            &#xe239;
-
-    script
-      var _gaq = _gaq || [];
-      _gaq.push(['_setAccount', 'UA-37308530-1']);
-      _gaq.push(['_trackPageview']);
-
-      (function() {
-        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-      })();
