--- a/views/index.jade
+++ b/views/index.jade
@@ -105,6 +105,11 @@ html(lang='en')
                 p User acquisition myths & realities by @Arrif Ziaudeen
                   span on 21 Feb, Fri
                 p.tagline by Hackers and Painters
+            li
+              a(href='https://www.facebook.com/events/1398456883740565')
+                p Makers' Meetup & Technology Showcase
+                  span on 21 Feb, Fri
+                p.tagline by Singapore Makers
 
         section
           h3 open source
