--- a/views/index.jade
+++ b/views/index.jade
@@ -7,7 +7,7 @@
   |                                                                                      /_/
   //- |
 
-!!! 5
+doctype
 html(lang='en')
 
   head
@@ -60,66 +60,7 @@ html(lang='en')
         section
           h3 open events
           ul.open-list.first
-            li
-              a(href='https://www.facebook.com/events/572982409445154')
-                p Creative Crew January Talk
-                  span on 14 Jan, Tue
-                p.tagline by Creative Crew
-            li
-              a(href='http://www.meetup.com/Software-Craftsmanship-Singapore/')
-                p Mini-code-retreat
-                  span on 14 Jan, Tue
-                p.tagline by Software Craftsmanship Singapore
-            li
-              a(href='http://www.meetup.com/R-User-Group-SG/events/152347492/')
-                p Credit Scoring with R
-                  span on 15 Jan, Wed
-                p.tagline by R User Group - Singapore (RUGS)
-            li
-              a(href='https://www.facebook.com/events/221206334719637')
-                p How I got my website to top Google's search results with no budget
-                  span on 17 Jan, Fri
-                p.tagline by Hackers and Painters
-            li
-              a(href='https://www.facebook.com/events/367106803434860')
-                p Engineering journalism: how one hack turned into a hacker to elevate his craft
-                  span on 17 Jan, Fri
-                p.tagline by Hackers and Painters
-            li
-              a(href='http://www.meetup.com/Singapore-Ruby-Group/events/158569682/')
-                p January Meetup
-                  span on 21 Jan, Tue
-                p.tagline by Singapore Ruby Group
-            li
-              a(href='http://www.meetup.com/Singapore-Android-Developers/events/157970792/')
-                p SG Android Developers January 2014
-                  span on 22 Jan, Wed
-                p.tagline by Singapore Android Developers
-            li
-              a(href='http://www.meetup.com/DataScience-SG-Singapore/events/158114672/')
-                p [Free SMU Seminar] Big Data, New Physics, and Geospatial Super-Food
-                  span on 23 Jan, Thu
-                p.tagline by DataScience SG (Singapore)
-            li
-              a(href='https://www.facebook.com/events/256254204532131')
-                p Computational Investing by @Stan
-                  span on 24 Jan, Fri
-                p.tagline by Hackers and Painters
-            li
-              a(href='http://www.meetup.com/DataScience-SG-Singapore/events/158721752/')
-                p DataScience SG Meetup - "What is this Data Science thing all about?"
-                  span on 25 Jan, Sat
-                p.tagline by DataScience SG (Singapore)
-            li
-              a(href='http://www.meetup.com/Agile-Singapore/events/159779592/')
-                p Coding Dojo: Legacy Code (C# and Java)
-                  span on 28 Jan, Tue
-                p.tagline by Agile Singapore
-            li
-              a(href='http://sg.hackandtell.org/')
-                p Hack and Tell
-                  span on 28 Jan, Tue
-                p.tagline by Hack and Tell
+
             li
               a(href='https://www.facebook.com/events/131002393736955')
                 p Why I switch from python to Go? by @Weng Wei
@@ -130,6 +71,41 @@ html(lang='en')
                 p Meetup #1
                   span on 11 Feb, Tue
                 p.tagline by MongoDB User Group
+            li
+              a(href='https://www.facebook.com/events/198393610360408/')
+                p iOS Dev Scout # Feb Meetup
+                  span on 11 Feb, Tue
+                p.tagline by iOS Dev Scout
+            li
+              a(href='https://www.facebook.com/events/1414263215485858')
+                p Creative Crew Talks - February Meeting 2014
+                  span on 11 Feb, Tue
+                p.tagline by Creative Crew
+            li
+              a(href='http://www.meetup.com/Singapore-JS/events/160688532/')
+                p talk.js
+                  span on 17 Feb, Mon
+                p.tagline by SingaporeJS
+            li
+              a(href='http://www.meetup.com/PUGS-Postgres-Users-Group-Singapore/events/160644722/')
+                p PUGS Meetup!
+                  span on 19 Feb, Wed
+                p.tagline by PUGS (Postgres Users Group Singapore)
+            li
+              a(href='http://www.meetup.com/Meteor-Singapore/events/162333392/')
+                p SG Meteorites 0.2
+                  span on 20 Feb, Thu
+                p.tagline by Meteor Singapore
+            li
+              a(href='https://www.facebook.com/events/516882598427920')
+                p User acquisition myths & realities by @Arrif Ziaudeen
+                  span on 21 Feb, Fri
+                p.tagline by Hackers and Painters
+            li
+              a(href='https://www.facebook.com/events/1398456883740565')
+                p Makers' Meetup & Technology Showcase
+                  span on 21 Feb, Fri
+                p.tagline by Singapore Makers
 
         section
           h3 open source
@@ -158,14 +134,3 @@ html(lang='en')
         li
           a(href='https://plus.google.com/115395182582724849094')
            &#xe239;
-
-    script
-      var _gaq = _gaq || [];
-      _gaq.push(['_setAccount', 'UA-37308530-1']);
-      _gaq.push(['_trackPageview']);
-
-      (function() {
-        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-      })();
