--- a/views/index.jade
+++ b/views/index.jade
@@ -62,30 +62,35 @@ html(lang='en')
           ul.open-list.first
 
             li
-              a(href='https://www.facebook.com/events/189999471204741')
-                p Meetup #1
-                  span on 11 Feb, Tue
-                p.tagline by MongoDB User Group
-            li
-              a(href='https://www.facebook.com/events/1414263215485858')
-                p iOS Dev Scout # Feb Meetup
-                  span on 11 Feb, Tue
-                p.tagline by iOS Dev Scout
-            li
               a(href='http://www.meetup.com/Singapore-JS/events/160688532/')
                 p talk.js
                   span on 17 Feb, Mon
                 p.tagline by SingaporeJS
+            li
+              a(href='http://www.meetup.com/Singapore-Ruby-Group/events/164411622/')
+                p February Meetup
+                  span on 18 Feb, Tue
+                p.tagline by Singapore Ruby Group
             li
               a(href='http://www.meetup.com/PUGS-Postgres-Users-Group-Singapore/events/160644722/')
                 p PUGS Meetup!
                   span on 19 Feb, Wed
                 p.tagline by PUGS (Postgres Users Group Singapore)
             li
+              a(href='https://www.facebook.com/events/616620065053757')
+                p Python User Group Meetup
+                  span on 19 Feb, Wed
+                p.tagline by Python User Group Singapore
+            li
               a(href='http://www.meetup.com/Meteor-Singapore/events/162333392/')
                 p SG Meteorites 0.2
                   span on 20 Feb, Thu
                 p.tagline by Meteor Singapore
+            li
+              a(href='https://www.facebook.com/events/257032944456609')
+                p AWS User Group Singapore 7th Meetup
+                  span on 20 Feb, Thu
+                p.tagline by AWS Singapore
             li
               a(href='https://www.facebook.com/events/516882598427920')
                 p User acquisition myths & realities by @Arrif Ziaudeen
@@ -96,6 +101,36 @@ html(lang='en')
                 p Makers' Meetup & Technology Showcase
                   span on 21 Feb, Fri
                 p.tagline by Singapore Makers
+            li
+              a(href='http://www.meetup.com/DataScience-SG-Singapore/events/164622352/')
+                p MOOC Study Group @ Data Science SG
+                  span on 22 Feb, Sat
+                p.tagline by DataScience SG Singapore
+            li
+              a(href='http://www.meetup.com/DataScience-SG-Singapore/events/164622352/')
+                p MOOC Study Group @ Data Science SG
+                  span on 22 Feb, Sat
+                p.tagline by DataScience SG Singapore
+            li
+              a(href='http://www.meetup.com/Singapore-Android-Developers/events/165737892/')
+                p SG Android Devs February Meetup
+                  span on 26 Feb, Wed
+                p.tagline by Singapore Android Developers
+            li
+              a(href='http://www.meetup.com/DataScience-SG-Singapore/events/164178772/')
+                p DataScience SG Meetup - "Musings of Data Scientists"
+                  span on 27 Feb, Thu
+                p.tagline by DataScience SG Singapore
+            li
+              a(href='http://www.meetup.com/R-User-Group-SG/events/162078172/')
+                p InfoViz: Information Visualisation (TBC)
+                  span on 12 Mar, Wed
+                p.tagline by R User Group - Singapore (RUGS)
+            li
+              a(href='https://www.facebook.com/events/993587830702051')
+                p Meetup #2
+                  span on 19 Mar, Wed
+                p.tagline by Singapore MongoDB User Group
 
         section
           h3 open source
