--- a/views/index.jade
+++ b/views/index.jade
@@ -62,53 +62,13 @@ html(lang='en')
           ul.open-list.first
 
             li
-              a(href='http://www.meetup.com/Singapore-JS/events/160688532/')
-                p talk.js
-                  span on 17 Feb, Mon
-                p.tagline by SingaporeJS
-            li
-              a(href='http://www.meetup.com/Singapore-Ruby-Group/events/164411622/')
-                p February Meetup
-                  span on 18 Feb, Tue
-                p.tagline by Singapore Ruby Group
-            li
-              a(href='http://www.meetup.com/PUGS-Postgres-Users-Group-Singapore/events/160644722/')
-                p PUGS Meetup!
-                  span on 19 Feb, Wed
-                p.tagline by PUGS (Postgres Users Group Singapore)
-            li
-              a(href='https://www.facebook.com/events/616620065053757')
-                p Python User Group Meetup
-                  span on 19 Feb, Wed
-                p.tagline by Python User Group Singapore
-            li
-              a(href='http://www.meetup.com/Meteor-Singapore/events/162333392/')
-                p SG Meteorites 0.2
-                  span on 20 Feb, Thu
-                p.tagline by Meteor Singapore
-            li
-              a(href='https://www.facebook.com/events/257032944456609')
-                p AWS User Group Singapore 7th Meetup
-                  span on 20 Feb, Thu
-                p.tagline by AWS Singapore
-            li
-              a(href='https://www.facebook.com/events/516882598427920')
-                p User acquisition myths & realities by @Arrif Ziaudeen
-                  span on 21 Feb, Fri
-                p.tagline by Hackers and Painters
-            li
-              a(href='https://www.facebook.com/events/1398456883740565')
-                p Makers' Meetup & Technology Showcase
-                  span on 21 Feb, Fri
-                p.tagline by Singapore Makers
-            li
               a(href='http://www.meetup.com/DataScience-SG-Singapore/events/164622352/')
                 p MOOC Study Group @ Data Science SG
                   span on 22 Feb, Sat
                 p.tagline by DataScience SG Singapore
             li
-              a(href='http://www.meetup.com/DataScience-SG-Singapore/events/164622352/')
-                p MOOC Study Group @ Data Science SG
+              a(href='http://www.meetup.com/DataScience-SG-Singapore/events/164178772/')
+                p DataScience SG Meetup - "Musings of Data Scientists"
                   span on 22 Feb, Sat
                 p.tagline by DataScience SG Singapore
             li
@@ -117,10 +77,25 @@ html(lang='en')
                   span on 26 Feb, Wed
                 p.tagline by Singapore Android Developers
             li
-              a(href='http://www.meetup.com/DataScience-SG-Singapore/events/164178772/')
-                p DataScience SG Meetup - "Musings of Data Scientists"
+              a(href='http://www.meetup.com/Agile-Singapore/events/164754922/')
+                p Coding Dojo: Legacy Code (C# and Java)
                   span on 27 Feb, Thu
-                p.tagline by DataScience SG Singapore
+                p.tagline by Agile Singapore
+            li
+              a(href='http://www.meetup.com/Meteor-Singapore/events/162333392/')
+                p SG Meteorites 0.2
+                  span on 27 Feb, Thu
+                p.tagline by Meteor Singapore
+            li
+              a(href='http://www.meetup.com/IxDA-Singapore/events/167009052/')
+                p IXD Session: Front-end pattern libraries
+                  span on 27 Feb, Thu
+                p.tagline by Interation Design Association of Singapore
+            li
+              a(href='https://www.facebook.com/events/1482191535341436')
+                p Dogfooding: A Product Manager's Best Friend by @Fabian
+                  span on 7 Mar, Fri
+                p.tagline by Hackers and Painters
             li
               a(href='http://www.meetup.com/R-User-Group-SG/events/162078172/')
                 p InfoViz: Information Visualisation (TBC)
