--- a/views/index.jade
+++ b/views/index.jade
@@ -62,50 +62,56 @@ html(lang='en')
           ul.open-list.first
 
             li
-              a(href='http://www.meetup.com/DataScience-SG-Singapore/events/164622352/')
-                p MOOC Study Group @ Data Science SG
-                  span on 22 Feb, Sat
-                p.tagline by DataScience SG Singapore
+              a(href='https://www.facebook.com/events/209706129227080')
+                p Getting Your Users To Love You - Marcus@Carousell
+                  span on 28 Feb, Fri
+                p.tagline by Hackers and Painters
             li
-              a(href='http://www.meetup.com/DataScience-SG-Singapore/events/164178772/')
-                p DataScience SG Meetup - "Musings of Data Scientists"
-                  span on 22 Feb, Sat
-                p.tagline by DataScience SG Singapore
-            li
-              a(href='http://www.meetup.com/Singapore-Android-Developers/events/165737892/')
-                p SG Android Devs February Meetup
-                  span on 26 Feb, Wed
-                p.tagline by Singapore Android Developers
-            li
-              a(href='http://www.meetup.com/Agile-Singapore/events/164754922/')
-                p Coding Dojo: Legacy Code (C# and Java)
-                  span on 27 Feb, Thu
-                p.tagline by Agile Singapore
-            li
-              a(href='http://www.meetup.com/Meteor-Singapore/events/162333392/')
-                p SG Meteorites 0.2
-                  span on 27 Feb, Thu
-                p.tagline by Meteor Singapore
-            li
-              a(href='http://www.meetup.com/IxDA-Singapore/events/167009052/')
-                p IXD Session: Front-end pattern libraries
-                  span on 27 Feb, Thu
-                p.tagline by Interation Design Association of Singapore
+              a(href='https://www.facebook.com/events/1408124819441199')
+                p Raspberry Jam SG #7
+                  span on 3 Mar, Mon
+                p.tagline by RaspberryPI & Co Singapore
             li
               a(href='https://www.facebook.com/events/1482191535341436')
                 p Dogfooding: A Product Manager's Best Friend by @Fabian
                   span on 7 Mar, Fri
                 p.tagline by Hackers and Painters
             li
+              a(href='https://www.facebook.com/events/1379167385688272')
+                p A Field Guide to the Algorithmic Whiteboard Coding Interview by @Wong Yiwen
+                  span on 7 Mar, Fri
+                p.tagline by Hackers and Painters
+            li
               a(href='http://www.meetup.com/R-User-Group-SG/events/162078172/')
-                p InfoViz: Information Visualisation (TBC)
+                p Information Visualization with R
                   span on 12 Mar, Wed
                 p.tagline by R User Group - Singapore (RUGS)
+            li
+              a(href='https://www.facebook.com/events/541493245949201')
+                p iOS Dev Scout March Meetup
+                  span on 17 Mar, Mon
+                p.tagline by iOS Dev Scout
+            li
+              a(href='http://www.meetup.com/Singapore-Ruby-Group/events/167933752/')
+                p March Meetup
+                  span on 18 Mar, Tue
+                p.tagline by Singapore Ruby Group
             li
               a(href='https://www.facebook.com/events/993587830702051')
                 p Meetup #2
                   span on 19 Mar, Wed
                 p.tagline by Singapore MongoDB User Group
+            li
+              a(href='https://www.facebook.com/events/501680506616601')
+                p Elixir for high performance, distributed applications by @Benjamin
+                  span on 21 Mar, Fri
+                p.tagline by Hackers and Painters
+            li
+              a(href='http://www.meetup.com/NodeBotsSingapore/events/167057592/')
+                p Demos & Meetup
+                  span on 27 Mar, Thu
+                p.tagline by NodeBots Singapore
+
 
         section
           h3 open source
