--- a/views/index.jade
+++ b/views/index.jade
@@ -62,11 +62,6 @@ html(lang='en')
           ul.open-list.first
 
             li
-              a(href='https://www.facebook.com/events/209706129227080')
-                p Getting Your Users To Love You - Marcus@Carousell
-                  span on 28 Feb, Fri
-                p.tagline by Hackers and Painters
-            li
               a(href='https://www.facebook.com/events/1408124819441199')
                 p Raspberry Jam SG #7
                   span on 3 Mar, Mon
@@ -82,6 +77,11 @@ html(lang='en')
                   span on 7 Mar, Fri
                 p.tagline by Hackers and Painters
             li
+              a(href='https://www.facebook.com/events/582091308547568')
+                p Friday Hacks #65
+                  span on 7 Mar, Fri
+                p.tagline by NUS Hackers
+            li
               a(href='http://www.meetup.com/R-User-Group-SG/events/162078172/')
                 p Information Visualization with R
                   span on 12 Mar, Wed
@@ -91,6 +91,11 @@ html(lang='en')
                 p iOS Dev Scout March Meetup
                   span on 17 Mar, Mon
                 p.tagline by iOS Dev Scout
+            li
+              a(href='https://www.facebook.com/events/573319669431831')
+                p FEDS is back !!
+                  span on 18 Mar, Tue
+                p.tagline by Front End Developers Singapore
             li
               a(href='http://www.meetup.com/Singapore-Ruby-Group/events/167933752/')
                 p March Meetup
