--- a/views/index.jade
+++ b/views/index.jade
@@ -82,6 +82,11 @@ html(lang='en')
                   span on 7 Mar, Fri
                 p.tagline by NUS Hackers
             li
+              a(href='http://sg.hackandtell.org/')
+                p Hack And Tell
+                  span on 7 Mar, Fri
+                p.tagline by SG Hack and Tell
+            li
               a(href='http://www.meetup.com/R-User-Group-SG/events/162078172/')
                 p Information Visualization with R
                   span on 12 Mar, Wed
