--- a/views/index.jade
+++ b/views/index.jade
@@ -87,6 +87,11 @@ html(lang='en')
                   span on 11 Mar, Tue
                 p.tagline by SG Hack and Tell
             li
+              a(href='https://www.facebook.com/events/1477538635800313')
+                p Creative Crew March Talk
+                  span on 11 Mar, Tue
+                p.tagline by Creative Crew
+            li
               a(href='http://www.meetup.com/R-User-Group-SG/events/162078172/')
                 p Information Visualization with R
                   span on 12 Mar, Wed
