--- a/views/index.jade
+++ b/views/index.jade
@@ -62,25 +62,15 @@ html(lang='en')
           ul.open-list.first
 
             li
-              a(href='http://sg.hackandtell.org/')
-                p Hack And Tell
-                  span on 11 Mar, Tue
-                p.tagline by SG Hack and Tell
-            li
-              a(href='https://www.facebook.com/events/1477538635800313')
-                p Creative Crew March Talk
-                  span on 11 Mar, Tue
-                p.tagline by Creative Crew
-            li
-              a(href='http://www.meetup.com/R-User-Group-SG/events/162078172/')
-                p Information Visualization with R
-                  span on 12 Mar, Wed
-                p.tagline by R User Group - Singapore (RUGS)
-            li
               a(href='https://www.facebook.com/events/541493245949201')
                 p iOS Dev Scout March Meetup
                   span on 17 Mar, Mon
                 p.tagline by iOS Dev Scout
+            li
+              a(href='http://www.meetup.com/Singapore-JS/events/169760582')
+                p talk.js
+                  span on 17 Mar, Mon
+                p.tagline by Singapore JS
             li
               a(href='https://www.facebook.com/events/573319669431831')
                 p FEDS is back !!
@@ -106,6 +96,11 @@ html(lang='en')
                 p Demos & Meetup
                   span on 27 Mar, Thu
                 p.tagline by NodeBots Singapore
+            li
+              a(href='http://www.meetup.com/DataScience-SG-Singapore/events/170449392/')
+                p MOOC Study Group @ Data Science SG
+                  span on 29 Mar, Sat
+                p.tagline by DataScience SG
 
 
         section
