--- a/views/index.jade
+++ b/views/index.jade
@@ -62,46 +62,60 @@ html(lang='en')
           ul.open-list.first
 
             li
-              a(href='https://www.facebook.com/events/541493245949201')
-                p iOS Dev Scout March Meetup
-                  span on 17 Mar, Mon
-                p.tagline by iOS Dev Scout
+              a(href='https://www.facebook.com/events/1546832788875202')
+                p Singapore PHP Meetup (March 2014)
+                  span on 25 Mar, Tue
+                p.tagline by Singapore PHP User Group
             li
-              a(href='http://www.meetup.com/Singapore-JS/events/169760582')
-                p talk.js
-                  span on 17 Mar, Mon
-                p.tagline by Singapore JS
+              a(href='http://www.meetup.com/IxDA-Singapore/events/171668572/')
+                p IxD Session: Wireframes considered harmful
+                  span on 26 Mar, Wed
+                p.tagline by IxDA Singapore
             li
-              a(href='https://www.facebook.com/events/573319669431831')
-                p FEDS is back !!
-                  span on 18 Mar, Tue
-                p.tagline by Front End Developers Singapore
-            li
-              a(href='http://www.meetup.com/Singapore-Ruby-Group/events/167933752/')
-                p March Meetup
-                  span on 18 Mar, Tue
-                p.tagline by Singapore Ruby Group
-            li
-              a(href='https://www.facebook.com/events/993587830702051')
-                p Meetup #2
-                  span on 19 Mar, Wed
-                p.tagline by Singapore MongoDB User Group
-            li
-              a(href='https://www.facebook.com/events/501680506616601')
-                p Elixir for high performance, distributed applications by @Benjamin
-                  span on 21 Mar, Fri
-                p.tagline by Hackers and Painters
+              a(href='https://www.facebook.com/events/589663611127215')
+                p Wearables and Internet of Things YaLong Evening
+                  span on 27 Mar, Thu
+                p.tagline by The Co-Foundry
             li
               a(href='http://www.meetup.com/NodeBotsSingapore/events/167057592/')
                 p Demos & Meetup
                   span on 27 Mar, Thu
                 p.tagline by NodeBots Singapore
             li
+              a(href='http://www.meetup.com/Meteor-Singapore/events/171937132/')
+                p SG Meteorites 0.3
+                  span on 27 Mar, Thu
+                p.tagline by Meteor Singapore
+            li
+              a(href='https://www.facebook.com/events/317063965085497')
+                p So, you want to build a Bluetooth Heartrate Monitor or iBeacon App? By @Mugunth
+                  span on 28 Mar, Fri
+                p.tagline by Hackers and Painters
+            li
               a(href='http://www.meetup.com/DataScience-SG-Singapore/events/170449392/')
                 p MOOC Study Group @ Data Science SG
                   span on 29 Mar, Sat
                 p.tagline by DataScience SG
-
+            li
+              a(href='http://www.meetup.com/Agile-Singapore/events/168931192/')
+                p Coding Dojo: Legacy Code (C# and Java)
+                  span on 2 Apr, Wed
+                p.tagline by Agile Singapore
+            li
+              a(href='http://www.meetup.com/Singapore-Android-Developers/events/171009392/')
+                p Arpil 2014 Meetup
+                  span on 2 Apr, Wed
+                p.tagline by Singapore Android Developers
+            li
+              a(href='http://www.meetup.com/AWS-SG/events/171179052/')
+                p April Meetup
+                  span on 10 Apr, Thu
+                p.tagline by AWS User Group Singapore
+            li
+              a(href='http://www.meetup.com/PUGS-Postgres-Users-Group-Singapore/events/172519482/')
+                p PUGS April Meetup
+                  span on 16 Apr, Wed
+                p.tagline by PUGS (Postgres Users Group Singapore)
 
         section
           h3 open source
