--- a/views/index.jade
+++ b/views/index.jade
@@ -62,40 +62,30 @@ html(lang='en')
           ul.open-list.first
 
             li
-              a(href='https://www.facebook.com/events/1546832788875202')
-                p Singapore PHP Meetup (March 2014)
-                  span on 25 Mar, Tue
-                p.tagline by Singapore PHP User Group
-            li
-              a(href='http://www.meetup.com/IxDA-Singapore/events/171668572/')
-                p IxD Session: Wireframes considered harmful
-                  span on 26 Mar, Wed
-                p.tagline by IxDA Singapore
-            li
-              a(href='https://www.facebook.com/events/589663611127215')
-                p Wearables and Internet of Things YaLong Evening
-                  span on 27 Mar, Thu
-                p.tagline by The Co-Foundry
-            li
-              a(href='http://www.meetup.com/NodeBotsSingapore/events/167057592/')
-                p Demos & Meetup
-                  span on 27 Mar, Thu
-                p.tagline by NodeBots Singapore
-            li
-              a(href='http://www.meetup.com/Meteor-Singapore/events/171937132/')
-                p SG Meteorites 0.3
-                  span on 27 Mar, Thu
-                p.tagline by Meteor Singapore
-            li
               a(href='https://www.facebook.com/events/317063965085497')
                 p So, you want to build a Bluetooth Heartrate Monitor or iBeacon App? By @Mugunth
                   span on 28 Mar, Fri
                 p.tagline by Hackers and Painters
             li
+              a(href='https://www.facebook.com/events/494844050627479')
+                p Friday Hacks #68
+                  span on 28 Mar, Fri
+                p.tagline by NUS Hackers
+            li
               a(href='http://www.meetup.com/DataScience-SG-Singapore/events/170449392/')
                 p MOOC Study Group @ Data Science SG
                   span on 29 Mar, Sat
                 p.tagline by DataScience SG
+            li
+              a(href='http://www.meetup.com/DataScience-SG-Singapore/events/170447662/')
+                p DataScience SG Meetup - Diving Into The Data Science Industry
+                  span on 29 Mar, Sat
+                p.tagline by DataScience SG
+            li
+              a(href='https://www.facebook.com/events/667530956626605')
+                p MOOC World Arduino Day
+                  span on 29 Mar, Sat
+                p.tagline by Singapore Makers
             li
               a(href='http://www.meetup.com/Agile-Singapore/events/168931192/')
                 p Coding Dojo: Legacy Code (C# and Java)
@@ -107,15 +97,25 @@ html(lang='en')
                   span on 2 Apr, Wed
                 p.tagline by Singapore Android Developers
             li
+              a(href='http://www.meetup.com/Agile-Singapore/events/168931082/')
+                p Mar/2014 - Open Space
+                  span on 2 Apr, Wed
+                p.tagline by Agile Singapore
+            li
+              a(href='http://www.meetup.com/Singapore-Android-Developers/events/171218832/')
+                p Samsung Developer Day, Singapore
+                  span on 5 Apr, Sat
+                p.tagline by Singapore Android Developers
+            li
               a(href='http://www.meetup.com/AWS-SG/events/171179052/')
                 p April Meetup
                   span on 10 Apr, Thu
                 p.tagline by AWS User Group Singapore
-            li
-              a(href='http://www.meetup.com/PUGS-Postgres-Users-Group-Singapore/events/172519482/')
-                p PUGS April Meetup
-                  span on 16 Apr, Wed
-                p.tagline by PUGS (Postgres Users Group Singapore)
+            //- li
+            //-   a(href='http://www.meetup.com/PUGS-Postgres-Users-Group-Singapore/events/172519482/')
+            //-     p PUGS April Meetup
+            //-       span on 16 Apr, Wed
+            //-     p.tagline by PUGS (Postgres Users Group Singapore)
 
         section
           h3 open source
